# canapea

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  outbox.sh  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  cli.yml  lib.yml  parser.yml  vsext.yml
.zed/: settings.json
bindings/c/: tree-sitter-canapea.pc.in  tree-sitter-lang0.pc.in
bindings/c/tree_sitter/: tree-sitter-lang0.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_canapea/: __init__.py
bindings/python/tree_sitter_lang0/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLang0Tests/: TreeSitterLang0Tests.swift
ci/: 00-ensure-test-env.sh  test.sh
cli/: .editorconfig  .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
cli/canapea/: Cargo.toml
cli/canapea/src/: main.rs
cli/lib/: Cargo.toml
cli/lib/src/: lib.rs
cli/scripting/: Cargo.toml  build.rs  mylib.c
cli/src/: lsp.zig  main.zig
codegen-es5/: Cargo.toml  README.md  build.zig  build.zig.zon
codegen-es5/src/: Emitter.zig  lib.rs  root.zig
codegen-es5/src/fixtures/: hello.cnp  hello.js  lib.cnp  lib.js
examples/: .editorconfig  basic.lang0  zz.core.prelude.py  zz.dsl.clj
language-design/: .editorconfig  2025-04-17-importing-modules.md  2025-04-19-remove-comma-delimiters-in-anonymous-function-signatures.md  2025-04-19-renaming-imports.md  2025-04-19-support-custom-types.md  2025-04-21-inline-testing-via-expect-syntax.md  2025-04-21-support-unpublished-features-in-development-modules.md  2025-04-25-support-equality-type-concept.md  2025-06-29-zig-rewrite.md  2025-07-13-debug-code-as-documentation.md  Glossary.md  README.md
language-design/drafts/: 2025-06-29-zig-rewrite.md  README.md
language-design/rejected/: README.md
language-server/: .editorconfig  .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
language-server/src/: codegen.rs  docs.rs  format.rs  lib.rs  main.zig  parsing.rs  root.zig
language-support-vscode/: .editorconfig  .gitignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json  vsc-extension-quickstart.md
language-support-vscode/assets/: tree-sitter-canapea.wasm
language-support-vscode/ci/: 00-ensure-test-env.sh  e2e.sh
language-support-vscode/src/: extension.js
language-support-vscode/syntaxes/: canapea.tmLanguage.json
language-support-vscode/test/: smoketest-load-parser.test.js  smoketest-load-parser.test.mjs
libcanapea/: README.md  build.zig  build.zig.zon
libcanapea-common/: README.md  build.zig  build.zig.zon
libcanapea-common/src/: Sapling.zig  SaplingCursor.zig  StringBuilder.zig  data.zig  defaults.zig  generate.zig  iterators.zig  root.zig
libcanapea/codegen-es5/: Emitter.zig  README.md  root.zig
libcanapea/codegen-es5/fixtures/: app.cnp  app.js  hello.cnp  hello.js  lib.cnp  lib.js
libcanapea/codegen-es5/fixtures/app/: int.cnp  io.cnp  lib.cnp  stdout.cnp
libcanapea/common/: Nursery.zig  README.md  Sapling.zig  SaplingCursor.zig  data.zig  root.zig
libcanapea/common/local/: README.md
libcanapea/common/support/: generate-types.zig
libcanapea/lib/janet/: janet.c
libcanapea/lib/tree-sitter/: language.zig  node.zig  parser.zig  point.zig  query.zig  query_cursor.zig  range.zig  root.zig  tree.zig  tree_cursor.zig
libcanapea/semantic-analyzer/: README.md
libcanapea/src/: ast_tests.zig  cli_util.zig  root.zig
org.canapea.core/: README.md  _README.md  io.cnp  lang.cnp  net.cnp  prelude.cnp
org.canapea.core/examples/myapp/: README.md
org.canapea.core/examples/myapp/src/: main.cnp
org.canapea.core/io/: task.cnp
org.canapea.core/lang/: number.cnp  result.cnp  sequence.cnp  string.cnp
org.canapea.core/lang/number/: decimal.cnp
org.canapea.core/myapp/: README.md
org.canapea.core/myapp/src/: main.cnp
org.canapea.core/net/: url.cnp
org.canapea.core/src/: format.cnp  io.cnp  lang.cnp  net.cnp  prelude.cnp
org.canapea.core/src/__probably_not__/: tuple.cnp
org.canapea.core/src/experiments/: float64.cnp  host.cnp  units.cnp  version.cnp
org.canapea.core/src/io/: eventual.cnp  internal.cnp  io.cnp  net.cnp  stdin.cnp  stdout.cnp  task.cnp
org.canapea.core/src/lang/: date.cnp  decimal.cnp  eventual.cnp  int.cnp  math.cnp  number.cnp  result.cnp  sequence.cnp  string.cnp
org.canapea.core/src/net/: url.cnp
org.canapea.core/src/ui/: layout.cnp
parser/: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  canapea.tmLanguage.json  go.mod  grammar.ebnf  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-canapea.wasm  tree-sitter.json
parser/bindings/c/tree_sitter/: tree-sitter-canapea.h
parser/bindings/python/tree_sitter_canapea/: __init__.py  binding.c
parser/bindings/rust/: lib.rs
parser/bindings/swift/TreeSitterCanapeaTests/: TreeSitterCanapeaTests.swift
parser/ci/: 00-ensure-test-env.sh  build.sh  grammar-to-ebnf.mjs  highlight.sh  npmrc  parse-example.sh  playground.sh  test.sh  version.sh
parser/examples/: basic.cnp  basic.lang0  canapea-cli-app.py  canapea-solid-tea.py  complex.py  transducer.js  zz.braindump.py  zz.core.prelude.py  zz.dsl1.py
parser/queries/: highlights.scm  locals.scm  tags.scm
parser/src/: grammar.json  node-types.json  parser.c  scanner.c
parser/test/: .editorconfig
parser/test/corpus/: basics.txt  capabilities.txt  datamodelling.txt  functions.txt  indentation.txt  literals.txt  modules.txt  smoketests.txt  types.txt
parser/test/highlight/: app.cnp  application.cnp  basic.cnp  complex.cnp  kernel.cnp
semantic-analyzer/: .gitignore  Cargo.toml  README.md  build.zig  build.zig.zon
semantic-analyzer/src/: lib.rs  traverse.rs
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basics.txt  functions.txt  indentation.txt  modules.txt  types.txt
(+17 files in other folders)
