[package]
name = "tree-sitter-lang0"
description = "Lang0 grammar for tree-sitter"
version = "0.0.1"
authors = ["Martin Feineis <mfeineis@users.noreply.github.com>"]
license = "UPL"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lang0"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/mfeineis/tree-sitter-lang0"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.3"
