[package]
name = "canapea-language-server"
version = "0.0.1"
edition = "2024"
workspace = "../cli"

[dependencies]
sem = { path = "../semantic-analyzer", package = "canapea-semantic-analyzer"}

tree-sitter = { version = "=0.24.4" }
tokio = { version = "1.44", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
