[package]
name = "canapea-language-server"
version = "0.0.1"
edition = "2024"
workspace = "../cli"

[dependencies]
sem = { path = "../semantic-analyzer", package = "canapea-semantic-analyzer"}
codegen-es5 = { path = "../codegen-es5", package = "canapea-codegen-es5" }

camino = { version = "1" }
tokio = { version = "1.44", features = ["full"] }
tower-lsp = { version = "0.20", features = ["proposed"] }
