[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-canapea"
description = "Canapea grammar for tree-sitter"
version = "0.0.21"
keywords = ["incremental", "parsing", "tree-sitter", "canapea"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Martin Feineis", email = "mfeineis@users.noreply.github.com" }]
requires-python = ">=3.10"
license.text = "UPL-1.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/canapea/canapea"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
