[package]
name = "canapea-semantic-analyzer"
version = "0.0.1"
edition = "2024"
workspace = "../cli"

[dependencies]
parser = { path = "../parser", package = "tree-sitter-canapea" }

# blake2 = { version ="0.10"}
camino = { version = "1" }
hex = { version = "0.4" }
sha2 = { version = "0.10" }
tree-sitter = { version = "=0.24.4" }
