[package]
name = "canapea"
version = "0.0.1"
authors = ["Martin Feineis <mfeineis@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }

[dependencies.crossterm]
version = "0.29"
features = ["filedescriptor"]

[[bin]]
name = "canapea"
path = "src/main.rs"