[package]
name = "cli"
version = "0.0.1"
authors = ["Martin Feineis <mfeineis@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# API Guidelines https://rust-lang.github.io/api-guidelines/

[dependencies]
lib = { path = "../lib" }
lsp = { path = "../../language-server" }

clap = { version = "4.5.37", features = ["derive"] }
# serde = { version = "1" }
wild = { version = "2.2.1" }

# [dependencies.crossterm]
# version = "0.29"
# features = ["filedescriptor"]


[[bin]]
name = "canapea"
path = "src/main.rs"
