[package]
name = "canapea-cli-lib"
version = "0.0.1"
authors = ["Martin Feineis <mfeineis@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp = { path = "../../language-server", package = "canapea-language-server" }
scripting = { path = "../scripting", package = "canapea-cli-scripting" }

glob = { version = "0.3.2" }
libc = "0.2"
